* removed React for the UI * removed TinyHttpd for the backend service * fixed errors * reduced footprint * improved performance and responsiveness